syntax = "proto3";
package user;

import "google/protobuf/timestamp.proto";

enum UserRole {
    PLAYER = 0;
    DEVELOPER = 1;
    ADMIN = 2;
}

message UserMessage {
     string id = 1;
     string email = 2;
     string username = 3;
     google.protobuf.Timestamp created_at = 4;
     UserRole role = 5;
}

message CreateUserRequest {
     string email = 1;
     string username = 2;
     string password = 3;
     UserRole role = 4;
}

message GetUserRequest {
     string id = 1;
}

message GetUserResponse {
     UserMessage user = 1;
}

message UpdateUserRequest {
    string id = 1;
    optional string email = 2;
    optional string username = 3;
    optional string password = 4;
    optional int32 role = 5;
}

message UpdateUserResponse {
    UserMessage user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
    string message = 2;
}

message ListUsersRequest {
    int32 limit = 1;
    int32 offset = 2;
    optional UserRole role = 3;
}

message ListUsersResponse {
    repeated UserMessage users = 1;
    int32 total = 2;
}

service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc CreateUser (CreateUserRequest) returns (UserMessage);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
}
